Add support for stdio mcp transport
